estilo adicionado ao card exemplo.

--- a/cards-modelos/index.html
+++ b/cards-modelos/index.html
@@ -26,6 +26,7 @@
             adipisci harum rerum sequi, voluptas laborum, inventore eius tempore eveniet facere!</p>
             <div class="icones">
             <a href="#"><c class="contatos"></c></a>
+            <a href="TEL"
         
         </figcaption>
 
